erDiagram
    admin {
        int id PK
        varchar username
        varchar password
        varchar nickname
        varchar status
        timestamp create_time
    }

    user {
        int id PK
        varchar username
        varchar password
        varchar nickname
        varchar status
        timestamp create_time
    }

    enterprise {
        int id PK
        varchar username
        varchar name
        varchar audit_status
        timestamp create_time
    }

    resume {
        int id PK
        varchar name
        varchar full_Name
        int user_id FK
        timestamp create_time
    }

    job_position {
        int id PK
        varchar name
        varchar type
        int enterprise_id FK
        int quantity_of_delivery
        timestamp create_time
    }

    application_record {
        int id PK
        int user_id FK
        int resume_id FK
        int job_position_id FK
        int enterprise_id FK
        varchar status
        timestamp create_time
    }

    interview_record {
        int id PK
        int user_id FK
        int resume_id FK
        int job_position_id FK
        int enterprise_id FK
        varchar status
        timestamp subscribe_time
        timestamp create_time
    }

    report {
        int id PK
        int reporter_id FK
        int enterprise_id FK
        text reason
    }

    slideshow {
        int id PK
        varchar title
        varchar link
        int sort
        timestamp create_time
    }

    advertising {
        int id PK
        varchar position
        varchar title
        varchar link
        int sort
        timestamp create_time
    }

    user ||--o{ resume : "user_id"
    enterprise ||--o{ job_position : "enterprise_id"

    user ||--o{ application_record : "user_id"
    resume ||--o{ application_record : "resume_id"
    job_position ||--o{ application_record : "job_position_id"
    enterprise ||--o{ application_record : "enterprise_id"

    user ||--o{ interview_record : "user_id"
    resume ||--o{ interview_record : "resume_id"
    job_position ||--o{ interview_record : "job_position_id"
    enterprise ||--o{ interview_record : "enterprise_id"

    user ||--o{ report : "reporter_id"
    enterprise ||--o{ report : "enterprise_id"
